--- a/Lesson4/style.css
+++ b/Lesson4/style.css
@@ -48,7 +48,15 @@ a:hover{
   transition: 0.5s;
 }
 
-#bannerimage{
+#centre-new-york {
+    text-align: center;
+}
+
+#new-york-div {
+    padding-left: 40%;
+}
+
+#banner-image{
       width: 100%;
       background-image:url(https://images.unsplash.com/photo-1546436836-07a91091f160?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1474&q=80);
       background-color: transparent;
