--- a/Lesson4/style.css
+++ b/Lesson4/style.css
@@ -73,7 +73,8 @@ a:hover{
     margin-left: 2%;
     margin-top: 10px;}
 
-    p{font-size: x-large;
+    p{
+    font-size: x-large;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
     border: black;
@@ -91,8 +92,10 @@ a:hover{
     text-align: center;
     }
 
-    .form{
+    form{
       text-align: center;
+      background-color:orange;
+      border-radius: 20px;
     }
 
     img{
