--- a/lesson8/style.css
+++ b/lesson8/style.css
@@ -6,7 +6,7 @@
 }
 .footer-container{
   background-color:#212329;
-  padding-bottom: 4rem;
+  padding: 4rem 0 4rem 0;
 }
 .footer{
   width:80;
@@ -56,6 +56,41 @@ footer-heading{
 
 #footer-email::placeholder{
   color: rgb(162, 157, 157);
+}
+#footer-email-btn{
+  width: 100px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #f9423d;
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+}
+#footer-email-btn:hover{
+  cursor: pointer;
+  background-color: #337af1;
+transition: all 0.4s ease-out;
+}
+@media screen and (max-width:1150px ){
+  .footer{height: 50vh;
+}
+.footer-email-form{
+  margin-top: 4rem;
+  }
+}
 
+@media screen and (max-width:820px ){
+  .footer{
+    padding-top: 2rem;
+  }
+}
 
+@media screen and (max-width:720px ){
+  .footer-3{
+   display: none;
+  }
+  .footer-email-form{
+    margin-top: 4rem;
+  }
 }
