--- a/Lesson4/style.css
+++ b/Lesson4/style.css
@@ -73,7 +73,7 @@ a:hover{
     margin-left: 2%;
     margin-top: 10px;}
 
-    p{
+    #first-paragraph{
     font-size: x-large;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
@@ -84,6 +84,29 @@ a:hover{
     border-radius: 10px;
     font-size: 20px;
     padding: 30px;
+    margin-left: 20px;
+  margin-right: 20px;
+  border-style: solid;
+  margin-bottom: 30px;
+
+}
+
+#second-paragraph{
+font-size: x-large;
+font-family: Arial, Helvetica, sans-serif;
+border-radius: 10px;
+border: black;
+padding: 20px;
+margin: left 220px;
+background-color: orange;
+border-radius: 10px;
+font-size: 20px;
+padding: 30px;
+margin-left: 20px;
+margin-right: 20px;
+border-style: solid;
+
+
 }
 
     header{
@@ -96,6 +119,15 @@ a:hover{
       text-align: center;
       background-color:orange;
       border-radius: 20px;
+      margin-left: 250px;
+      margin-right: 250px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      border-style: solid;
+      border-radius: 10px;
+      margin-bottom: 30px;
+
+
     }
 
     img{
@@ -104,4 +136,105 @@ a:hover{
 
   .navbar{
   text-align: center;
+border: solid;
+background-color: #212329;
+padding-bottom: 20px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.footer-container {
+  background-color: #212329;
+  padding: 4rem 0 4rem 0;
+}
+.footer {
+  width: 80;
+  height: 20%;
+  background-color: #212329;
+  color: #ffff;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+footer-heading {
+  display: flex;
+  flex-direction: column;
+  margin-right: 4rem;
+}
+
+.footer-heading h2 {
+  margin-bottom: 2rem;
+}
+
+.footer-heading a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+
+.footer-heading a:hover {
+  color: red;
+  transition: 0.3s ease-out;
+}
+
+.footer-email-form h2 {
+  margin-bottom: 2rem;
+}
+#footer-email {
+  width: 250px;
+  height: 40px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  padding: 00.5rem;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+#footer-email::placeholder {
+  color: rgb(162, 157, 157);
+}
+#footer-email-btn {
+  width: 100px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #f9423d;
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+}
+#footer-email-btn:hover {
+  cursor: pointer;
+  background-color: #337af1;
+  transition: all 0.4s ease-out;
+}
+@media screen and (max-width: 1150px) {
+  .footer {
+    height: 50vh;
+  }
+  .footer-email-form {
+    margin-top: 4rem;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .footer {
+    padding-top: 2rem;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .footer-3 {
+    display: none;
+  }
+  .footer-email-form {
+    margin-top: 4rem;
+  }
 }
